feTurbulence with stitchTiles is broken https://bugs.webkit.org/show_bug.cgi?id=179862

Reviewed by Zalan Bujtas.

Source/WebCore:

The "stitchTiles" logic was broken, and not equivalent to the spec sample code,
because it didn't compute and wrap the bx1 and by1 equivalents separately from
bx0 and by0.

Annotated the code with the equivalent sample code from the spec for ease of
comparison.

Also make some functions const.

Test: svg/filters/feTurbulence-stitchTiles.html

* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::noise2D const):
(WebCore::FETurbulence::calculateTurbulenceValueForPoint const):
(WebCore::FETurbulence::fillRegion const):
(WebCore::checkNoise): Deleted.
(WebCore::FETurbulence::noise2D): Deleted.
(WebCore::FETurbulence::calculateTurbulenceValueForPoint): Deleted.
(WebCore::FETurbulence::fillRegion): Deleted.
* platform/graphics/filters/FETurbulence.h:
* platform/graphics/filters/FilterEffect.h:
(WebCore::FilterEffect::filter const):

LayoutTests:

Ref test that masks out an empty area of the filter and compares with a green rectangle.

* svg/filters/feTurbulence-stitchTiles-expected.html: Added.
* svg/filters/feTurbulence-stitchTiles.html: Added.


Canonical link: https://commits.webkit.org/195887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225018 268f45cc-cd09-0410-ab3c-d52691b4dbfc