Source/WebCore/platform/graphics/filters/FilterEffect.h
@@ -144,6 +144,7 @@ public:
     void setEffectBoundaries(const FloatRect& effectBoundaries) { m_effectBoundaries = effectBoundaries; }
 
     Filter& filter() { return m_filter; }
+    const Filter& filter() const { return m_filter; }
 
     bool clipsToBounds() const { return m_clipsToBounds; }
     void setClipsToBounds(bool value) { m_clipsToBounds = value; }
